Update run configurations for tests by allowing access level netty library. This is kind of restrictions of Netty we currently used with vert.x and java 11th.